# databricks-api-samples

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
docs/: authentication.md  deployment-patterns.md  design-spec.md  jobs-api.md  sql-api.md
java/: README.md  pom.xml
java/examples/: FindAndTriggerExample.java  ListJobsExample.java  SqlQueryExample.java
java/src/main/java/com/databricks/client/: AuthConfig.java  DatabricksWorkspaceClient.java  JobsClient.java  SqlClient.java  SqlQueryOptions.java  TriggerParams.java
java/src/main/java/com/databricks/client/exceptions/: JobRunException.java  (+7 more)
java/src/test/java/com/databricks/client/: DatabricksWorkspaceClientTest.java  JobsClientTest.java  SqlClientTest.java
nodejs/: README.md  package.json  tsconfig.json  tsconfig.test.json
nodejs/examples/: find-and-trigger-job.ts  list-jobs.ts  poll-job-status.ts  sql-query.ts  trigger-and-wait.ts  trigger-job.ts
nodejs/src/: auth.ts  client.ts  config-parser.ts  exceptions.ts  http.ts  index.ts  jobs.ts  models.ts  sql.ts
nodejs/tests/: auth.test.ts  client.test.ts  config-parser.test.ts  exceptions.test.ts  http.test.ts  jobs.test.ts  models.test.ts  sql.test.ts
python/: README.md  pyproject.toml
python/examples/: async_trigger_and_poll.py  find_and_trigger_job.py  list_jobs.py  poll_job_status.py  sql_query.py  trigger_job.py
python/src/databricks_workspace_client/: __init__.py  auth.py  client.py  exceptions.py  jobs.py  models.py  sql.py
python/tests/: conftest.py  test_auth.py  test_client.py  test_jobs.py  test_models.py  test_sql.py
(+7 files in other folders)
